Provide a setting to define how string comparison is performed.

BUG: 227905

svn path=/trunk/extragear/graphics/digikam/; revision=1095703