digikam/albumsettings.cpp
@@ -132,7 +132,8 @@ public:
         configApplySidebarChangesDirectlyEntry("Apply Sidebar Changes Directly"),
         configScanAtStartEntry("Scan At Start"),
         configSyncNepomuktoDigikamEntry("Sync Nepomuk to Digikam"),
-        configSyncDigikamtoNepomukEntry("Sync Digikam to Nepomuk")
+        configSyncDigikamtoNepomukEntry("Sync Digikam to Nepomuk"),
+        configStringComparisonTypeEntry("String Comparison Type")
         {}
 
     const QString                       configGroupDefault;
@@ -210,6 +211,7 @@ public:
     const QString                       configScanAtStartEntry;
     const QString                       configSyncNepomuktoDigikamEntry;
     const QString                       configSyncDigikamtoNepomukEntry;
+    const QString                       configStringComparisonTypeEntry;
 
     // start up setting
     bool                                showSplash;
@@ -319,6 +321,10 @@ public:
     // nepomuk settings
     bool                                syncToDigikam;
     bool                                syncToNepomuk;
+
+    //misc
+    AlbumSettings::StringComparisonType stringComparisonType;
+
 };
 
 class AlbumSettingsCreator { public: AlbumSettings object; };
@@ -434,6 +440,8 @@ void AlbumSettings::init()
 
     d->syncToDigikam                = false;
     d->syncToNepomuk                = false;
+
+    d->stringComparisonType         = AlbumSettings::Natural;
 }
 
 void AlbumSettings::readSettings()
@@ -550,6 +558,7 @@ void AlbumSettings::readSettings()
     d->showPermanentDeleteDialog = group.readEntry(d->configShowPermanentDeleteDialogEntry,   true);
     d->sidebarApplyDirectly      = group.readEntry(d->configApplySidebarChangesDirectlyEntry, false);
     d->scanAtStart               = group.readEntry(d->configScanAtStartEntry,                 true);
+    d->stringComparisonType      = (StringComparisonType) group.readEntry(d->configStringComparisonTypeEntry, (int) Natural);
 
     // ---------------------------------------------------------------------
 
@@ -664,6 +673,7 @@ void AlbumSettings::saveSettings()
     group.writeEntry(d->configShowPermanentDeleteDialogEntry,   d->showPermanentDeleteDialog);
     group.writeEntry(d->configApplySidebarChangesDirectlyEntry, d->sidebarApplyDirectly);
     group.writeEntry(d->configScanAtStartEntry,                 d->scanAtStart);
+    group.writeEntry(d->configStringComparisonTypeEntry,        (int) d->stringComparisonType);
 
     // ---------------------------------------------------------------------
 
@@ -1504,6 +1514,16 @@ void AlbumSettings::setSyncDigikamToNepomuk(bool val)
 bool AlbumSettings::getSyncDigikamToNepomuk() const
 {
     return d->syncToNepomuk;
+}
+
+void AlbumSettings::setStringComparisonType(AlbumSettings::StringComparisonType val)
+{
+    d->stringComparisonType = val;
+}
+
+AlbumSettings::StringComparisonType AlbumSettings::getStringComparisonType() const
+{
+    return d->stringComparisonType;
 }
 
 
